# air-type

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh  protocol.txt
.github/workflows/: build-client.yml  build-server.yml  build.yml  release.yml
Client/: CMakeLists.txt  Main.cpp
Client/include/: Client.hpp  DLLoader.hpp
Client/src/: Client.cpp
Doc/: Doxyfile
Libs/ECS/: CMakeLists.txt
Libs/ECS/include/: Behaviour.hpp  ComponentManager.hpp  Coordinator.hpp  ECSValues.hpp  EntityFactory.hpp  EntityManager.hpp  SystemManager.hpp
Libs/ECS/include/Components/: ComponentArray.hpp  Components.hpp  IComponentArray.hpp
Libs/ECS/include/Components/PathingStrategy/: CircularPathing.hpp  LinearPathing.hpp  PathingStrategy.hpp
Libs/ECS/include/Entities/: Background.hpp  Collectible.hpp  Enemy.hpp  Ennemy.hpp  Missile.hpp  Player.hpp  Settings.hpp
Libs/ECS/include/Systems/: Collision.hpp  Damage.hpp  Draw.hpp  Heal.hpp  ISystem.hpp  Killed.hpp  Move.hpp  Shoot.hpp  Spawn.hpp  Update.hpp  Wave.hpp
Libs/ECS/src/: Behaviour.cpp  Coordinator.cpp  Engine.cpp  EntityManager.cpp  SystemManager.cpp
Libs/ECS/src/Entities/: Background.cpp  Collectible.cpp  Enemy.cpp  Ennemy.cpp  EntityFactory.cpp  Missile.cpp  Player.cpp  Settings.cpp
Libs/ECS/src/Systems/: Collision.cpp  Damage.cpp  Heal.cpp  Killed.cpp  Move.cpp  Shoot.cpp  Update.cpp  Wave.cpp
Libs/Graphics/: CMakeLists.txt  Core.cpp  LaunchGame.cpp
Libs/Graphics/include/: Core.hpp  Game.hpp  ICore.hpp  IGame.hpp  IGraphic.hpp  Option.hpp
Libs/Graphics/include/Raylib/: Raylib.hpp
Libs/Graphics/src/: AnimateEntities.cpp  DrawGame.cpp  DrawMenu.cpp  DrawPause.cpp  DrawSettings.cpp  DrawStars.cpp  Game.cpp  HandleInput.cpp  Keys.cpp  Option.cpp  StoreEntity.cpp
Libs/Network/: CMakeLists.txt
Libs/Network/include/: AClient.hpp  AServer.hpp  BinaryBuffer.hpp  IClient.hpp  IServer.hpp  OwnedRequest.hpp  Requests.hpp  RequestsFactory.hpp  RequestsTypes.hpp  SafeQueue.hpp  ThreadSafeQueue.hpp  UDPClient.hpp  UDPConnection.hpp  UDPServer.hpp
Libs/Network/src/: BinaryBuffer.cpp  UDPClient.cpp  UDPServer.cpp
Server/: CMakeLists.txt  Main.cpp
Server/include/: SafeQueue.hpp  Server.hpp
Server/src/: Server.cpp
Waves/: level.1
client/: CMakeLists.txt  Main.cpp  physics_simulation
client/include/: ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  EcsValues.hpp  Engine.hpp  EntityManager.hpp  IComponentArray.hpp  IComponentManager.hpp  SystemManager.hpp
client/include/Components/: Components.hpp  EntityType.hpp  IComponent.hpp  Image.hpp  Keybind.hpp  Life.hpp  Power.hpp  Sound.hpp  Spacial.hpp  Speed.hpp
client/include/Entities/: Background.hpp  Collectible.hpp  Enemy.hpp  IEntity.hpp  Missile.hpp  Player.hpp  Settings.hpp
client/include/Systems/: Draw.hpp  ISystem.hpp  ReceiveUDP.hpp  SendUDP.hpp  Spawn.hpp  SystemManager.hpp
client/src/: Engine.cpp
entityComponentSystem/include/: Coordinator.hpp
entityComponentSystem/include/Components/: ComponentManager.hpp  Components.hpp  IComponentArray.hpp
entityComponentSystem/include/Entities/: EntityManager.hpp
entityComponentSystem/include/Systems/: ISystem.hpp  ReceiveTCP.hpp  SendTCP.hpp
server/: CMakeLists.txt  Main.cpp
server/include/Components/: Action.hpp
server/include/Systems/: Damage.hpp  Killed.hpp  ReceiveTCP.hpp  ReceiveUDP.hpp  SendTCP.hpp  SendUDP.hpp  Spawn.hpp
